--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,3 +13,8 @@ phases:
     commands:
       - echo Check manifest syntax ...
 #      - kube-score score *.yaml  --exit-one-on-warning
+  post_build:
+    commands:
+      - echo Build started on `date`
+      - RUN=$(aws deploy push --application-name $APPLICATION_NAME --s3-location s3://${S3_NAME}/${APPLICATION_NAME}.zip --ignore-hidden-files --region us-east-1 | sed -n 2p  | sed 's/<//g' | sed 's/>//g' | sed 's/ deployment-group-name/ alpinehelloworld/g' | sed 's/ deployment-config-name/ CodeDeployDefault.AllAtOnce/g' | sed 's/ description/ deployment/g')
+      - $RUN 
